--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,1 +1,17 @@
-<h1><%= @places.inspect %></h1>
+<%= @places.inspect %>
+
+  <div>
+
+    <h1><%= place.name %></h1><br />
+
+    <i><%= place.address %></i><br />
+
+    <p><%= place.description %></p><br />
+
+  </div>
+
+
+  <hr />
+  
+
+<% end %>
