--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,37 @@
 @import "bootstrap";
 
 .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(244,220,66, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");}
+  
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(244,220,66, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+
+  }
+
+
+.booyah-box {
+  
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+
+  background: #fff;
+
+  border: 1px solid #ccc;
+
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+
+  margin-top: 10px;
+
+  margin-bottom: 15px;
+
+  padding: 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  
+  margin: 0;
+
+  padding: 0;
+
+}
