--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,17 +1,14 @@
 <% @places.each do |place| %>
 
-  <div>
+  <div class="booyah-box col-10 offset-1">
 
-    <h1><%= place.name %></h1><br />
+    <h1><%= place.name %></h1>
 
-    <i><%= place.address %></i><br />
+    <i><%= place.address %></i><br /><br />
 
     <p><%= place.description %></p><br />
 
   </div>
-
-
-  <hr />
 
 
 <% end %>
