--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,19 +1,23 @@
 @import "bootstrap";
 
-.navbar-toggler-icon {
-  
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(244,220,66, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 
-  }
+
+.navbar {
+  
+  background: image_url('Dance.jpg');
+
+  box-shadow: 0px 1px 3px #2a2a2a;
+}
+
 
 
 .booyah-box {
   
-  -moz-box-shadow: 1px 1px 2px 0 #f9e634;
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
 
-  -webkit-box-shadow: 1px 1px 2px 0 #f9e634;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
 
-  box-shadow: 1px 1px 2px 0 #f9e634;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
 
   background: #fff;
 
@@ -38,6 +42,8 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
   
-  background: image_url('subtle_carbon.png')
-  
+  background: image_url('subtle_carbon.png');
+
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+
 }
