corrected spelling error

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       
       </button>
       
-      <a class="navbar-brand" href="#">Rendevroom</a>
+      <a class="navbar-brand" href="#">Rendezvroom</a>
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         
