Added pagination gem and then bootstrap will_paginate for better CSS

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -57,3 +57,13 @@ body {
   font-family: Futura, "Trebuchet MS", Arial, sans-serif;
 
 }
+
+.pagination {
+
+    margin-top: 10px;
+
+    align-items: center;
+
+    justify-content: center;
+    
+}
