--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -14,4 +14,4 @@
 <% end %>
 
 
-  
+<%= will_paginate @places, renderer: WillPaginate::ActionView::BootstrapLinkRenderer, inner_window: 1, outer_window: 0 %>
