--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,8 +8,13 @@
 
     <p><%= place.description %></p><br />
 
-  </div>
+    <% if place.user.present? %>
 
+      <small><%= place.user.email %></small>
+
+    <% end %>
+
+  </div>
 
 <% end %>
 
