fixed sign out link in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 
             <li class="nav-item" >
 
-              <% link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+              <%=link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
 
             </li>
 
