--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,8 @@
+<div class="booyah-box col-10 offset-1">
+
 <h2>Forgot your password?</h2>
+
+<br />
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
@@ -7,9 +11,16 @@
     <%= f.input :email, required: true, autofocus: true %>
   </div>
 
+  <br />
+
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Send me reset password instructions", class: 'ghost-white-button' %>
   </div>
+
 <% end %>
 
+<br />
+
 <%= render "devise/shared/links" %>
+
+</div>
