added edit feature and page for users to edit submissions, changed button css

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -83,3 +83,14 @@ body {
    &:hover{color: blue}
 
 }
+
+.hyperstyle {
+  
+  color: orange;
+
+  cursor: pointer;
+
+   &:hover{color: #4933D9}
+
+  }
+
