--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="booyah-box col-10 offset-1">
 
-    <h1><%= link_to place.name, place_path(place) %></h1><br />
+    <h1><%= link_to place.name, place_path(place), class: 'hyperstyle' %></h1><br />
 
     <i><%= place.address %></i><br /><br />
 
