--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,11 +1,17 @@
 <div class="booyah-box col-10 offset-1">
 
-  <h1><%= @place.name %></h1>
+  <h1><%= @place.name %></h1><br />
 
   <i><%= @place.address %></i>
 
   <br /><br />
 
   <p><%= @place.description %></p>
+
+  <div class="float-right">
+
+    <%= link_to 'Edit', edit_place_path(@place), class: 'ghost-white-button' %>
+
+  </div>
 
 </div>
