--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -10,7 +10,9 @@
 
   <div class="float-right">
 
-    <%= link_to 'Edit', edit_place_path(@place), class: 'ghost-white-button' %>
+    <%= link_to 'EDIT', edit_place_path(@place), class: 'edit-button' %>
+
+    <%= link_to 'REMOVE', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this location?'}, class: 'danger-button' %>
 
   </div>
 
