--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -10,7 +10,11 @@
 
   <div class="float-right">
 
+    <% if current_user && current_user == @place.user %>
+
     <%= link_to 'EDIT', edit_place_path(@place), class: 'edit-button' %>
+
+    <% end %>
 
     <%= link_to 'REMOVE', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this location?'}, class: 'danger-button' %>
 
