--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -116,3 +116,15 @@ body {
    &:hover{color: green}
 
 }
+
+.help-block {
+
+  color: #ff3333;
+
+  background-color: #FFEEEE;
+
+  border-radius: 3px;
+
+  padding: 2px 8px 2px 8px;
+  
+}
