--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -8,6 +8,40 @@
 
   <p><%= @place.description %></p>
 
+
+
+  <% if @place.latitude.present? && @place.longitude.present? %>
+   
+
+  <script>
+
+    function initMap() {
+      var myLatLng = {lat: <%= @place.latitude %>, lng: <%= @place.longitude %>};
+
+      var map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 12,
+        center: myLatLng
+      });
+
+      var marker = new google.maps.Marker({
+        position: myLatLng,
+        map: map,
+        title: 'Hello World!'
+      });
+    }
+  </script>
+
+  <script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkaNcX664DX7I3Zx2xWpYwSqQDtN1A9Vk&callback=initMap">
+  </script>
+
+  <div id="map"></div>
+
+  <% end %>
+
+  <br />
+
+
   <div class="float-right">
 
     <% if current_user && current_user == @place.user %>
