--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -58,17 +58,61 @@
 
 </div>
 
-<div class="clear"></div>
 
-<%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+<!-- Button trigger modal -->
+  <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+  
+  ADD A COMMENT
+  
+  </button>
 
-  <%= f.input :message %>
+<!-- Modal -->
 
-  <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+ 
+ <div class="modal-dialog" role="document">
+   
+    <div class="modal-content">
+      
+      <div class="modal-header">
+      
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      
+          <span aria-hidden="true">×</span>
+      
+        </button>
+      
+        <h4 class="modal-title" id="myModalLabel">SHARE YOUR THOUGHTS</h4>
+      
+      </div>
 
-  <%= f.submit "Add a Comment", class: 'ghost-white-button' %>
+      <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+      
+      <div class="modal-body">
 
-<% end %>
+          <%= f.input :message %>
+
+          <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+
+        </div>
+
+        <div class="modal-footer">
+
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">CLOSE</button>
+
+          <%= f.submit "SUBMIT", class: 'ghost-white-button' %>
+
+        </div>
+
+      <% end %>
+      
+      </div>
+    
+    </div>
+  
+  </div>
+
+</div>
 
 <h1>Comments</h1>
 
