--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -82,7 +82,23 @@ body {
 
    cursor: pointer;
 
-   &:hover{color: blue}
+   &:hover{color: orange}
+
+}
+
+.inverse-ghost-white-button {
+  
+   color: #black;
+
+   background-color: white;
+
+   border: 2px solid black;
+
+   border-radius: 25 px;
+
+   cursor: pointer;
+
+   &:hover{color: orange}
 
 }
 
@@ -146,4 +162,30 @@ label.control-label abbr[title="required"]{
 }
 
 
+blockquote {
+
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+
+}
+
+blockquote:before {
+
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+
+}
+
+blockquote p {
+
+  display: inline;
+
+}
 
