Shows the latest comment to a place on the homepage

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -8,11 +8,33 @@
 
     <p><%= place.description %></p><br />
 
-    <% if place.user.present? %>
+  <% if place.user.present? %>
 
       <small><%= place.user.email %></small>
 
     <% end %>
+
+    <% if place.comments.present? %>
+
+      <div class="col-12">
+      
+        <blockquote>
+        
+        <% if place.comments.last.humanized_rating.present? %>
+          
+          <b><%= comment.humanized_rating %></b> -
+        
+        <% end %>
+        
+        <%= place.comments.last.message %>
+        
+        <small><%= place.comments.last.user.email %></small>
+      
+      </blockquote>
+    
+    </div>
+
+  <% end %>
 
   </div>
 
