added Carrierwave gemfile, changed places controller ran migration

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -148,3 +148,13 @@
   <% end %>
 
 </div>
+
+
+
+<%= simple_form_for @photo, url: '#' do |f| %>
+
+  <%= f.input :picture %>
+
+  <%= f.submit "Share a Photo", class: 'btn btn-primary' %>
+  
+<% end %>
