--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -58,7 +58,65 @@
 
 </div>
 
-<!-- Modal -->
+<!-- photo block -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="m-place-box col-xs-10 col-xs-offset-1">
+      <% if @place.photo.present? %>
+        <h2 class="m-photo-heading">Photos of <%= @place.name %></h2>
+        <div class="row">
+        <% @place.photos.each do |photo| %>
+          <div class="col-md-6 col-lg-4 m-photo-container">
+            <%= image_tag photo.picture, :class => 'm-photo-picture' %>
+            <div class="clear"></div>
+            <p class="m-photo-caption">
+              <%= photo.caption %>
+            </p>
+          </div>
+        <% end %>
+        </div>
+
+      <% else %>
+        <h2>Add a Photo</h2>
+      <% end %>
+
+    
+      <!-- Button trigger add photo modal -->
+      <button class="btn btn-primary btn-lg pull-right m-photo-button" data-toggle="modal" data-target="#addPhotoModal">
+        Add Photo
+      </button>
+    
+      <!-- Add Photo Modal -->
+      <div class="modal fade" id="addPhotoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title" id="myModalLabel">Add Photo of <%= @place.name %></h4>
+            </div>
+            <div class="modal-body">
+              <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+                <%= f.input :picture %>
+                <%= f.input :caption %>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <%= f.submit 'Upload', :class => 'btn btn-primary' %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+    </div>
+  </div>
+</div>
+
+
+
+
+
+<!--Comment Modal -->
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
  
@@ -147,14 +205,3 @@
   
   <% end %>
 
-</div>
-
-
-
-<%= simple_form_for @photo, url: '#' do |f| %>
-
-  <%= f.input :picture %>
-
-  <%= f.submit "Share a Photo", class: 'btn btn-primary' %>
-  
-<% end %>
