--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -62,7 +62,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="m-place-box col-xs-10 col-xs-offset-1">
-      <% if @place.photo.present? %>
+      <% if @place.photos.present? %>
         <h2 class="m-photo-heading">Photos of <%= @place.name %></h2>
         <div class="row">
         <% @place.photos.each do |photo| %>
