configured notification mailer to include link_to

--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -1,7 +1,9 @@
 <p>Hey There!</p>
 <p>
 
-  Rad!! <b>A comment has been added on Rendezvroom</b>
+  Rad!! <b>A comment has been added on Rendezvroom</b>.
+
+  Check it out <%= link_to 'here', place_url(@place) %>.
 
 </p>
 
