--- a/app/views/notification_mailer/comment_added.text.erb
+++ b/app/views/notification_mailer/comment_added.text.erb
@@ -2,6 +2,8 @@ Hey There!
 
 Someone left a comment on a place you submitted, how cool is that?
 
+Check it out, <%= place_url(@place) %>
+
 Ride On,
 
 The Rendezvroom Team
