added carousel slider to page and images to assets for places

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -52,11 +52,13 @@
 
     <% end %>
 
-    
-
   </div>
 
 </div>
+
+<div class="clear"></div>
+
+
 
 <!-- photo block -->
 <div class="container-fluid">
