adjusted HTML and CSS of slider and made images responsive

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -14,11 +14,11 @@
 
     <div class="carousel-item active">
 
-      <%= image_tag 'motoparking.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'motoparking.jpg', class: 'img-fluid' %>
 
       <div class="carousel-caption d-none d-md-block">
       
-      <h3>Where Motos Meet!</h3>
+      <h3>WHERE MOTOS MEET!</h3>
    
       </div>
 
@@ -26,21 +26,23 @@
     
     <div class="carousel-item">
       
-      <%= image_tag 'motohangout.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'motohangout.jpg', class: 'img-fluid' %>
 
       <div class="carousel-caption d-none d-md-block">
 
-        <h3>Where should a ride start?</h3>
+        <h3>WHERE SHOULD A RIDE START?</h3>
 
       </div>
 
+    </div>
+
      <div class="carousel-item">
       
-      <%= image_tag 'motosunset2.jpg', class: 'd-block img-fluid' %>
+      <%= image_tag 'motosunset2.jpg', class: 'img-fluid' %>
 
       <div class="carousel-caption d-none d-md-block">
 
-        <h3>Where should it end?</h3>
+        <h3>WHERE SHOULD IT END?</h3>
 
       </div>
 
@@ -60,7 +62,7 @@
     <span class="sr-only">Next</span>
 
   </a>
-  
+
 </div>
 
 
