--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -162,7 +162,7 @@ label.control-label abbr[title="required"]{
 }
 
 
-blockquote {
+.blockquote {
 
   background: #f9f9f9;
   border-left: 10px solid #ccc;
@@ -172,7 +172,7 @@ blockquote {
 
 }
 
-blockquote:before {
+.blockquote:before {
 
   color: #ccc;
   content: open-quote;
@@ -183,9 +183,58 @@ blockquote:before {
 
 }
 
-blockquote p {
+.blockquote p {
 
   display: inline;
 
 }
 
+.navbar .navbar-inverse {
+  
+  background: image_url('cartographer.png');
+  
+  box-shadow: 0px 1px 3px #2a2a2a;
+  
+  margin-bottom: 0;
+}
+
+
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  
+  max-height: 800px;
+
+  width: 100%;
+
+}
+
+.carousel-item.active,
+
+.carousel-item-next,
+
+.carousel-item-prev {
+  display: block;
+ } 
+
+.carousel-caption {
+
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+
+  font-size: 120px;
+
+  text-shadow: rgba(0, 0, 0, 0.95) 2px 2px;
+
+  background-color: rgba(0, 0, 0, 0.5);
+
+  width: 100%;
+
+  position: absolute;
+  
+  left: 0;
+
+}
+
+.carousel {
+
+  box-shadow: 0px 3px 8px #2a2a2a;
+  
+}
