--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
   
           <li class="nav-item">
     
-           <%= link_to new_place_path, class: 'nav-link' do %>
+           <%= link_to new_place_path, class: 'navnav-link' do %>
      
              <i class="fa fa-plus-circle"></i>
       
@@ -49,7 +49,7 @@
 
             <li class="nav-item" >
 
-              <%=link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+              <%=link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'navnav-link' %>
 
             </li>
 
