--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -79,12 +79,12 @@
         </div>
 
       <% else %>
-        <h2>Add a Photo</h2>
+        
       <% end %>
 
     
       <!-- Button trigger add photo modal -->
-      <button class="btn btn-primary btn-lg pull-right m-photo-button" data-toggle="modal" data-target="#addPhotoModal">
+      <button class="inverse-ghost-white-button btn-lg float-right" data-toggle="modal" data-target="#addPhotoModal">
         Add Photo
       </button>
     
@@ -166,8 +166,7 @@
 
 <div class="col-10 offset-1">
 
-<h1 class="float-center">Comments</h1>
-
+<h1 class="float-right">Comments</h1>
 
 
 <!-- Button trigger modal -->
