--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,12 @@
 
           <% if user_signed_in? %>
 
+            <li class="nav-item">
+
+              <%= link_to 'My Profile', user_path(current_user), class: 'myprofile-link' %>
+
+            </li>
+
             <li class="nav-item" >
 
               <%=link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'navnav-link' %>
