--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,27 @@
-<h1><%= @user.email %></h1>
+<div class="booyah-box">
 
-<h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
+  <div class="row" >
 
-<h4><%= @user.comments.count %> total comments</h4>
+    <div class="col-4">
 
-<h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
+  <%= image_tag 'user.png' %>
+
+    </div>
+
+    <div class="col-8">
+
+      <h1><%= @user.email %></h1>
+      
+      <h3>Member Since: <%= @user.created_at.strftime("%B %d, %Y") %></h3>
+      
+      <h4><%= @user.comments.count %> total comments</h4>
+      
+      <h4><%= @user.comments.where(rating: '5_stars').count %> total 5 star reviews</h4>
+
+    </div>
+
+  </div>
+
+  <div class="clear"></div>
+  
+</div>
