edited comment and photo modals for functionality purposes

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -62,147 +62,181 @@
 
 <!-- photo block -->
 <div class="container-fluid">
+  
   <div class="row">
+    
     <div class="m-place-box col-xs-10 col-xs-offset-1">
+      
       <% if @place.photos.present? %>
+       
         <h2 class="m-photo-heading">Photos of <%= @place.name %></h2>
+        
         <div class="row">
+       
         <% @place.photos.each do |photo| %>
+         
           <div class="col-md-6 col-lg-4 m-photo-container">
-            <%= image_tag photo.picture, :class => 'placepics' %>
+          
+            <%= image_tag photo.picture, :class => 'm-photo-picture' %>
+          
             <div class="clear"></div>
+          
             <p class="m-photo-caption">
+          
               <%= photo.caption %>
+          
             </p>
+          
           </div>
+        
         <% end %>
+        
         </div>
 
       <% else %>
         
+        <h2>Add a Photo</h2>
+      
       <% end %>
 
     
       <!-- Button trigger add photo modal -->
-      <button class="inverse-ghost-white-button btn-lg float-right" data-toggle="modal" data-target="#addPhotoModal">
+      
+      <button class="btn btn-primary btn-lg pull-right m-photo-button" data-toggle="modal" data-target="#addPhotoModal">
+        
         Add Photo
+      
       </button>
     
       <!-- Add Photo Modal -->
+      
       <div class="modal fade" id="addPhotoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        
         <div class="modal-dialog">
+          
           <div class="modal-content">
+            
             <div class="modal-header">
+              
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              
               <h4 class="modal-title" id="myModalLabel">Add Photo of <%= @place.name %></h4>
+            
             </div>
+            
             <div class="modal-body">
+              
               <%= simple_form_for @photo, :url => place_photos_path(@place) do |f| %>
+                
                 <%= f.input :picture %>
+                
                 <%= f.input :caption %>
+           
             </div>
+            
             <div class="modal-footer">
+              
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                
                 <%= f.submit 'Upload', :class => 'btn btn-primary' %>
-              <% end %>
+             
+             <% end %>
+           
             </div>
+         
           </div>
+       
         </div>
+      
       </div>
     
     </div>
+ 
   </div>
+
 </div>
 
+<!-- COMMENT BLOCK -->
 
+<div class="m-place-box col-xs-10 col-xs-offset-1">
+  <% if @place.comments.present? %>
 
+    <h2 class="m-comments-heading">Comments for <%= @place.name %></h2>
 
+    <% @place.comments.each do |comment| %>
 
-<!--Comment Modal -->
+      <div class="col-md-6">
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
- 
- <div class="modal-dialog" role="document">
-   
-    <div class="modal-content">
-      
-      <div class="modal-header">
-      
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-      
-          <span aria-hidden="true">×</span>
-      
-        </button>
-      
-        <h4 class="modal-title" id="myModalLabel">SHARE YOUR THOUGHTS</h4>
-      
+        <blockquote>
+
+          <p><strong></strong> <%= comment.message %></p>
+
+          <br>
+
+          <% if comment.humanized_rating.present? %>
+
+            <b><strong></strong> <%= comment.humanized_rating %></b>
+
+          <% end %>
+
+          <small><%= comment.user.email %></small>
+
+        </blockquote>
+
       </div>
 
-      <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-      
-      <div class="modal-body">
+    <% end %>
 
-          <%= f.input :message %>
+  <% else %>
 
-          <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+    <h2>Add a Comment</h2>
+
+  <% end %>
+
+  <!-- Button trigger modal -->
+  <button class="btn btn-primary btn-lg pull-right" data-toggle="modal" data-target="#myModal">
+    Comment
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+    <div class="modal-dialog">
+
+      <div class="modal-content">
+
+        <div class="modal-header">
+
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+          <h4 class="modal-title" id="myModalLabel">Comment on <%= @place.name %></h4>
+
+        </div>
+
+        <div class="modal-body">
+
+          <%= simple_form_for @comment, :url => place_comments_path(@place) do |f| %>
+
+            <%= f.input :message %>
+
+            <%= f.input :rating, :as => :select, :collection => Comment::RATINGS %>
 
         </div>
 
         <div class="modal-footer">
 
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">CLOSE</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 
-          <%= f.submit "SUBMIT", class: 'ghost-white-button' %>
+            <%= f.submit 'Comment', :class => 'btn btn-primary' %>
+
+          <% end %>
 
         </div>
 
-      <% end %>
-      
+      </div>
+
     </div>
-    
+
   </div>
-
-</div>
-
-<div class="col-10 offset-1">
-
-<h1 class="float-right">Comments</h1>
-
-
-<!-- Button trigger modal -->
-
-<button type="button" class="inverse-ghost-white-button btn-lg float-right" data-toggle="modal" data-target="#myModal">
-
-  Add a comment
-
-</button>
-
-</div>
-
-
-<div class="clear"></div>
-
-<div class="row">
   
-  <% @place.comments.each do |comment| %>
-    
-    <div class="col-12 col-sm-6">
-      
-      <blockquote>
-        
-        <% if comment.humanized_rating.present? %>
-          
-          <b><%= comment.humanized_rating %></b> -
-        
-        <% end %>
-        
-        <%= comment.message %>
-        
-        <small><%= comment.user.email %></small>
-      
-      </blockquote>
-    
-    </div>
-  
-  <% end %>
-
+</div>
