fixed photo button

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -238,14 +238,12 @@
 <div class="clear"></div>
 
   <!-- ADD PHOTO BUTTON TO TRIGGER MODAL -->
-  
-  <button type="button" class="btn btn-primary btn-lg float-left" data-toggle="modal" data-target="#myModal">
-    
-    Add Photo
+      
+  <button class="btn btn-primary btn-lg pull-right m-photo-button" data-toggle="modal" data-target="#addPhotoModal">
 
+   Add Photo
+      
   </button>
-
-</div>
 
 <div class="clear"></div>
 
