--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -68,7 +68,7 @@
 
       <% if @place.photos.present? %>
 
-        <h2 class="m-photo-heading">Photos of <%= @place.name %></h2>
+        <h2 style="color:#45A29E;" class="m-photo-heading">Photos of <%= @place.name %></h2>
 
         <div class="row">
 
@@ -94,7 +94,7 @@
 
       <% else %>
 
-        <h2>Share a Picture!</h2>
+        <h2 style="color:#45A29E;">Share a Picture!</h2>
 
       <% end %>
 
@@ -194,7 +194,7 @@
 
         </button>
 
-        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+        <h4 class="modal-title" id="myModalLabel">Share your thoughts...</h4>
 
       </div>
 
@@ -212,7 +212,7 @@
 
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 
-          <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+          <%= f.submit "Add a Comment", class: 'btn comment-modal-button' %>
 
         </div>
 
@@ -227,7 +227,7 @@
 
   <!-- COMMENT BUTTON TO TRIGGER MODAL -->
   
-  <button type="button" class="btn btn-primary btn-lg float-left" data-toggle="modal" data-target="#myModal">
+  <button type="button" class="place-page-button btn-lg float-left" data-toggle="modal" data-target="#myModal">
     
     Add Comment
 
@@ -239,7 +239,7 @@
 
   <!-- ADD PHOTO BUTTON TO TRIGGER MODAL -->
       
-  <button class="btn btn-primary btn-lg pull-right m-photo-button" data-toggle="modal" data-target="#addPhotoModal">
+  <button class="place-page-button btn-lg pull-right m-photo-button" data-toggle="modal" data-target="#addPhotoModal">
 
    Add Photo
       
