CSS edits to modal buttons

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -10,7 +10,7 @@
 
       <div class="carousel-caption d-none d-md-block">
       
-      <h3>WHERE MOTOS MEET!</h3>
+      <h3 style="color:white;">WHERE MOTOS MEET!</h3>
    
       </div>
 
@@ -22,7 +22,7 @@
 
       <div class="carousel-caption d-none d-md-block">
 
-        <h3>WHERE SHOULD A RIDE START?</h3>
+        <h3 style="color:white;">WHERE SHOULD A RIDE START?</h3>
 
       </div>
 
@@ -34,7 +34,7 @@
 
       <div class="carousel-caption d-none d-md-block">
 
-        <h3>WHERE SHOULD IT END?</h3>
+        <h3 style="color:white;">WHERE SHOULD IT END?</h3>
 
       </div>
 
