--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -106,7 +106,7 @@
 
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 
-              <h4 class="modal-title" id="myModalLabel">Add Photo of <%= @place.name %></h4>
+              <h4 class="modal-title" id="myModalLabel">Add a photo of <%= @place.name %></h4>
 
             </div>
 
@@ -122,9 +122,9 @@
 
             <div class="modal-footer">
 
-              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 
-                <%= f.submit 'Upload', :class => 'btn btn-primary' %>
+                <%= f.submit 'Upload', :class => 'btn comment-modal-button' %>
 
               <% end %>
 
