edit link change in master.scss

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -228,11 +228,11 @@ button:focus {
 
 .edit-button {
   
-   color: orange;
+   color: black;
 
    cursor: pointer;
 
-   &:hover{color: green}
+   &:hover{color: #66fcf1}
 
 }
 
